--- a/Frontend/music_app/pubspec.yaml
+++ b/Frontend/music_app/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
   getwidget: ^2.0.4
   camera: ^0.10.0+3
+  http: ^0.13.5
 
 
   # The following adds the Cupertino Icons font to your application.
