--- a/Frontend/music_app/pubspec.yaml
+++ b/Frontend/music_app/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   getwidget: ^2.0.4
   camera: ^0.10.0+3
   http: ^0.13.5
+  firebase_core: ^1.24.0
 
 
   # The following adds the Cupertino Icons font to your application.
